--- a/src/universal-app/kitchen-sink-mdc/kitchen-sink-mdc.html
+++ b/src/universal-app/kitchen-sink-mdc/kitchen-sink-mdc.html
@@ -105,9 +105,9 @@
 
 <h2>MDC Slider</h2>
 <mat-slider></mat-slider>
-<mat-slider value="50"></mat-slider>
-<mat-slider tickInterval="1" min="1" max="10" value="5" thumbLabel></mat-slider>
-<mat-slider disabled></mat-slider>
+<mat-slider [startValue]="50"></mat-slider>
+<mat-slider [step]="1" [min]="1" [max]="10" [startValue]="5"></mat-slider>
+<mat-slider [isDisabled]="true"></mat-slider>
 
 <h2>MDC Tabs</h2>
 
